# custom-ide

./: Cargo.toml
src/: macros.rs  main.rs  terminal.rs
src/commands/: executor.rs  keys.rs  mod.rs  validator.rs
