[package]
name = "ide"
version = "0.1.0"
edition = "2021"
authors = ["Sougata Bhattacharjee D-3-X-T-3-R <sougata.bhattacharjee94@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
colored = "2.0.0"
fs_extra = "1.2.0" 
